...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="   "
    app:startDestination="@id/eventListFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.the_tarlords.ui.profile.ProfileFragment"
        android:label="   "
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_eventOrganizerListFragment"
            app:destination="@id/eventOrganizerListFragment"
            app:popUpTo="@id/eventOrganizerListFragment" />
        <action
            android:id="@+id/action_profileFragment_to_eventListFragment"
            app:destination="@id/eventListFragment"
            app:popUpTo="@id/eventListFragment" />
        <action
            android:id="@+id/action_profileFragment_to_eventBrowseFragment2"
            app:destination="@id/eventBrowseFragment"
            app:popUpTo="@id/eventBrowseFragment" />
        <action
            android:id="@+id/action_profileFragment_to_profileBrowseFragment"
            app:destination="@id/profileBrowseFragment" />
        <action
            android:id="@+id/action_profileFragment_to_imageBrowseFragment"
...
        android:id="@+id/eventListFragment"
        android:name="com.example.the_tarlords.ui.home.EventListFragment"
        android:label="Event Horizon"
        tools:layout="@layout/fragment_event_list">
        <action
            android:id="@+id/action_eventFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_eventFragment_to_eventOrganizerListFragment"
            app:destination="@id/eventOrganizerListFragment"
            app:popUpTo="@id/eventOrganizerListFragment" />
        <action
            android:id="@+id/action_eventListFragment_to_profileFragment"
...
